# BowlingScoreBoard

./: .gitignore  BSB_Controller.cpp  BSB_Controller.h  BSB_GameData.cpp  BSB_GameData.h  BSB_GameStepWidget.ui  BSB_MainWindow.cpp  BSB_MainWindow.cpp.autosave  BSB_MainWindow.h  BSB_MainWindow.ui  BSB_UdpListener.cpp  BSB_UdpListener.h  BowlingScoreBoard.pro  BowlingScoreBoard.vcxproj  CMakeLists.txt  README.md  ScoreboardMainWindow.cpp  Zaehlweise.txt  gamestepwidget.ui  main.cpp  packetsender_export.ini
BowlingScoreBoard/: BowlingScoreBoard.pro  ScoreboardMainWindow.cpp  ScoreboardMainWindow.h  scoreboardmainwindow.ui.autosave
